# ragdoll

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  package-lock.json  package.json  ragdoll.sh  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly-load.yml
apps/api/: package.json
apps/api/src/: app.ts  git-mirror.ts  mcp.ts  server.ts  websocket.ts
apps/api/test/: api.test.ts  auth-rbac.test.ts  auth-settings.test.ts  auth-sso.test.ts  cascade-deletes.test.ts  connections.test.ts  dataset-namespace-api.test.ts  dataset-namespace-resolver.test.ts  dataset-resolver-connections.test.ts  event-subscriptions.test.ts  events.test.ts  external-connections.test.ts  folders.test.ts  helpers.ts  http-utils.test.ts  invoke.test.ts  mcp.test.ts  openapi-spec.test.ts  org-versioning.test.ts  pipeline-bindings.test.ts  pipeline-modules.test.ts  pipeline-ref.test.ts  pipeline-validation.test.ts  (+8 more)
apps/cli/: package.json
apps/file-watcher/: package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/worker/: package.json
docs/: users-guide.md
docs/admin/: access-control.md  cli.md  connections.md  external-connections.md  git-backed-tenants.md  governance-and-security.md  in-app-help.md  kubernetes-deployment.md  load-testing.md  mcp.md  observability.md  operations-runbook.md  podman.md  prometheus.md  triggers.md  upgrade-and-migrations.md
docs/adr/: 0001-platform-boundaries.md  0002-config-inheritance.md  0003-secret-references.md  0004-queue-abstraction.md  0005-authentication-and-identity.md  0006-vector-store-isolation.md  0007-lazy-otel-and-agnostic-app.md  0008-plugin-config-and-secrets-ux.md  0009-organization-versioning-scheduler.md  0010-external-python-plugins.md  0011-auth-rbac-casbin.md  0012-triggers-cli-mcp.md  0013-builder-doc-tabs.md  0014-lgtm-observability.md  0015-live-events-bus.md  0016-datasets.md  0017-api-keys-scoped.md  0018-synchronous-pipelines.md  0019-plugin-contract-v2.md  0020-external-database-plugins.md  0021-external-connections-registry.md  0022-connect-rpc-plugin-transport.md  0023-unified-connections-registry.md  0024-connection-drivers-as-plugins.md  0025-neo4j-driver.md  0026-bulwark-ingestion-fixes.md  0027-wazuh-driver.md  0028-k8s-driver.md  0029-cartography-module-completeness.md  0030-cartography-crawl-provenance.md  0031-wazuh-pull-provenance.md  0032-reference-ontology-etl.md  0033-cloudquery-transport.md  0034-plugin-source-registry.md  0035-pluggable-identity-and-authz-providers.md  0036-platform-plugins.md
docs/api/: openapi.yaml
docs/architecture/: initial-design.md  runtime.md
docs/developer/: custom-identity-and-authz-providers.md  local-development.md  opensearch-plugins.md  platform-plugins.md  plugin-author-quickstart.md  plugin-development.md  provider-development.md
docs/plugins/: README.md  action_status_refresh.md  basic_rag_prompt.md  basic_text_chunker.md  buffer_memory.md  chunk_contextual.md  code_chunker.md  compose_with_style.md  conversation_rewrite.md  dataset_search.md  dataset_upsert.md  delta_filter.md  dgraph_query.md  dgraph_upsert.md  email_preprocess.md  entity_resolve.md  extract_entities.md  field_router.md  filesystem_source.md  for_loop.md  foreach.md  github_source.md  if_then.md  json_output_parser.md  manual_text_input.md  merge_rrf.md  opensearch_bm25_retriever.md  opensearch_delete.md  opensearch_hybrid_retriever.md  opensearch_input.md  opensearch_output.md  opensearch_vector_retriever.md  path_classifier.md  pipeline_call.md  postgres_exec.md  postgres_query.md  postgres_upsert.md  provider_chat.md  provider_embeddings.md  qdrant_delete.md  (+24 more)
docs/recipes/: codebase-rag.md
docs/refactor/: 00-context-summary.md  01-rbac-audit.md  17-branch-ready.md
examples/configs/: example-secret-refs.yaml  global-config.yaml  pipeline-config.yaml  tenant-overrides.yaml
examples/pipelines/: codebase-ingest-code.yaml  codebase-ingest-docs.yaml  crawl-knowledge-graph.yaml  crawl-summarize-demo.yaml  github-knowledge-graph.yaml  local-demo.yaml  query-only.yaml  support-ingestion.yaml  support-rag.yaml  transform-demo.yaml  web-crawl-demo.yaml  xml-codec-demo.yaml
examples/plugins/: README.md  sample-plugin.json
examples/plugins/python-echo/: Dockerfile  README.md  pyproject.toml
examples/plugins/python-echo/app/: server.py
examples/tenants/: demo-tenants.yaml
infra/docker/: api.Dockerfile  docker-compose.podman.yml  docker-compose.python-scale.yml  docker-compose.yml  file-watcher.Dockerfile  nginx.conf  nginx.conf.template  web.Dockerfile  worker.Dockerfile
infra/k8s/: ragdoll-secrets.example.yaml
infra/otel/: otel-collector.yaml  otelcol-config.podman.yaml  otelcol-config.yaml
plugins/builtin-rag/: package.json
plugins/sample-text/: index.ts  package.json
proto/: plugin.proto
scripts/: _compose.sh  build-load-seeds.ts  compose.sh  db-init.ts  dev-down.sh  dev-refresh.sh  dev-up.sh  k6.sh  load-trend.ts  migrate-pipelines-to-datasets.ts  oc-build.sh  relayout-existing-pipelines.ts  relayout-seeds.ts  smoke.sh
services/python-plugins/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
services/python-plugins/app/: __init__.py  cli.py  connect_bridge.py  git_source.py  main.py  models.py  plugin_loader.py  safety.py
services/python-plugins/app/plugins/: __init__.py  cartography_crawl_plugin.py  cloudquery_aws_sync_plugin.py  crawl4ai_plugin.py  rerank_bge_plugin.py  scrapy_plugin.py
services/python-plugins/tests/: conftest.py  test_api.py  test_cartography_crawl.py  test_cloudquery_aws_sync.py  test_crawl_bfs.py  test_plugin_loader.py  test_safety.py
tests/e2e/: crawl-demos.e2e.test.ts  cross-language-plugin.e2e.test.ts  example-plugins.test.ts  harness.ts  load-pipelines.e2e.test.ts  load-trend.e2e.test.ts  local-demo.e2e.test.ts  neo4j-cartography-pipeline.e2e.test.ts  platform.e2e.test.ts
tests/playwright/: .gitignore  globalSetup.ts  globalTeardown.ts  playwright.config.ts
tests/security/: api-keys.test.ts  datasets.test.ts  rbac-audit.test.ts
(+314 files in other folders)
